# k8s-cni-migration-tool

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  cni_migration.py  mkdocs.yml  pyproject.toml  requirements-updated.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
docs/: changelog.md  contributing.md  index.md  roadmap.md
docs/getting-started/: quick-start.md
docs/testing/: ci-cd.md  minikube.md
examples/: calico_to_cilium_migration.sh  cilium-node-config.yaml  cilium-values.yaml  migration-plan_summary.json  migration_workflow.sh
examples/star-wars-demo/: README.md  http-sw-app.yaml  k8s_l3_l4_policy.yaml  star-wars-migration-demo.sh  sw_l3_l4_l7_policy.yaml  sw_l3_l4_policy.yaml
examples/test-policies/: 02-pod-selector.yaml  03-namespace-selector.yaml  04-cidr-rules.yaml  05-multi-port-rules.yaml  06-combined-selectors.yaml  test-migration.sh
k8s_cni_migration_tool/: __init__.py  cli.py
lib/: __init__.py  assessment.py  k8s_utils.py  migration_planner.py  policy_converter.py  validator.py
poetry_migration/: pyproject.toml
poetry_migration/tests/: test_k8s_cni_migration_tool.py
tests/: test_comprehensive.py  test_tool.sh
tests/minikube/: README.md  run-tests.sh
tests/minikube/setup/: setup-calico.sh  setup-cilium.sh  setup-flannel.sh  setup-weave.sh
tests/minikube/test-apps/microservices-demo/: README.md  backend.yaml  database.yaml  frontend.yaml  network-policies.yaml
tests/minikube/test-apps/network-policies/calico/: allow-dns.yaml  (+2 more)
tests/minikube/validation/: connectivity-tests.sh  policy-tests.sh
(+3 files in other folders)
